--- a/Python/Session_1/Code/Basic.ipynb
+++ b/Python/Session_1/Code/Basic.ipynb
@@ -2,24 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "3c7dc647",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "5"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "11\n"
+     ]
     }
    ],
    "source": [
     "X=5\n",
-    "X"
+    "Y=6\n",
+    "print(X+Y)"
    ]
   },
   {
