--- a/src/Python/Session_1/Code/Basic.ipynb
+++ b/src/Python/Session_1/Code/Basic.ipynb
@@ -2,8 +2,177 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "8fff51bd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "my name is hazem , my age is 30\n",
+      "my name is amr , my age is 50\n",
+      "my name is mohamed , my age is 55\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"my name is {0} , my age is {1}\".format(\"hazem\", 30))\n",
+    "print(\"my name is {} , my age is {}\".format(\"amr\", 50))\n",
+    "print(\"my name is {x} , my age is {y}\".format(x=\"mohamed\", y=55))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "b41034c7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "my name is Hazem, my age is 21\n"
+     ]
+    }
+   ],
+   "source": [
+    "name = \"Hazem\"\n",
+    "age = 21\n",
+    "print(f\"my name is {name}, my age is {age}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "780115dc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "My name is Hazem, and I am 21 years old. I am engaged in learning Machine learning\n"
+     ]
+    }
+   ],
+   "source": [
+    "name = \"Hazem\"\n",
+    "age = 21\n",
+    "course_name = \"Machine learning\"\n",
+    "\n",
+    "print(f\"My name is {name}, and I am {age} years old. I am engaged in learning {course_name}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "1d3afdb4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "learn\n"
+     ]
+    }
+   ],
+   "source": [
+    "name = \"amit learning\"\n",
+    "print(name[5:10:1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "be96f7c0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "AMIT LEARNING\n",
+      "amit learning\n",
+      "aMIt Learning\n",
+      "Amit learning\n"
+     ]
+    }
+   ],
+   "source": [
+    "name = \"aMIt Learning\"\n",
+    "\n",
+    "print(name.upper())\n",
+    "print(name.lower())\n",
+    "print(name.replace('amit','hello'))\n",
+    "print(name.capitalize())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "a81c3bcd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['hazem', 'amr', 'mohamed']\n"
+     ]
+    }
+   ],
+   "source": [
+    "name ='hazem amr mohamed'\n",
+    "split_name = name.split()\n",
+    "print(split_name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "47a2eaf3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'hazem amr mohamed'"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sent = \" \".join(split_name)\n",
+    "sent"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "deee266d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "this is double qoutes: \"hello\" \n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"this is double qoutes: \\\"hello\\\" \")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "44fcf08e",
    "metadata": {},
    "outputs": [],
    "source": []
