--- a/src/Python/Session_1/Assignment/Task_2.ipynb
+++ b/src/Python/Session_1/Assignment/Task_2.ipynb
@@ -50,12 +50,145 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "018c027e",
+   "metadata": {},
+   "source": [
+    "Task-2"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 104,
    "id": "5a43016f",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Core_message: emocleW EPGTQ\n",
+      "Reversed first word: Welcome\n",
+      "Second word decoded: PGTQ\n",
+      "Final_decoded_message: Welcome PGTQ\n"
+     ]
+    }
+   ],
+   "source": [
+    "Encoded_Message = \"###!!@emocleW EPGTQ!!!6789\"\n",
+    "\n",
+    "#Extract the core part of the message\n",
+    "core = (Encoded_Message.split('@')[1]).split(\"!\")[0]\n",
+    "print(\"Core_message:\",core)\n",
+    "\n",
+    "#Reverse the first word\n",
+    "first_word = core.split()[0]\n",
+    "Rev_first_word = first_word[::-1]\n",
+    "print(\"Reversed first word:\",Rev_first_word)\n",
+    "\n",
+    "#Replace shifted vowels in the second word\n",
+    "second_word = core.split()[1]\n",
+    "decoded_second = second_word[1:]\n",
+    "print(\"Second word decoded:\", decoded_second)\n",
+    "\n",
+    "#Final decoded message\n",
+    "Final_decoded_message = Rev_first_word + \" \" + decoded_second\n",
+    "print(\"Final_decoded_message:\", Final_decoded_message)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cf5c0741",
+   "metadata": {},
+   "source": [
+    "Task-3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "id": "f36ce5d7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Core_message: gnirtS PLIO\n",
+      "Reversed first word: String\n",
+      "Second word decoded: PLEU\n",
+      "Final_decoded_message: String PLEU\n"
+     ]
+    }
+   ],
+   "source": [
+    "Encoded_Message = \"&&&**$gnirtS PLIO!!@1234\"\n",
+    "\n",
+    "#Extract the core part of the message\n",
+    "core = (Encoded_Message.split('$')[1]).split(\"!\")[0]\n",
+    "print(\"Core_message:\",core)\n",
+    "\n",
+    "#Reverse the first word\n",
+    "first_word = core.split()[0]\n",
+    "Rev_first_word = first_word[::-1]\n",
+    "print(\"Reversed first word:\",Rev_first_word)\n",
+    "\n",
+    "#Replace shifted vowels in the second word\n",
+    "second_word = core.split()[1]\n",
+    "decoded_second = second_word.replace(\"I\",\"E\").replace(\"O\",\"U\")\n",
+    "print(\"Second word decoded:\", decoded_second)\n",
+    "\n",
+    "#Final decoded message\n",
+    "Final_decoded_message = Rev_first_word + \" \" + decoded_second\n",
+    "print(\"Final_decoded_message:\", Final_decoded_message)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "607092d2",
+   "metadata": {},
+   "source": [
+    "Task-4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "id": "19eda07c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Core_message: yalpstcejorp EPUVT\n",
+      "Reversed first word: projectsplay\n",
+      "Second word decoded: APOVT\n",
+      "Final_decoded_message: projectsplay APOVT\n"
+     ]
+    }
+   ],
+   "source": [
+    "Encoded_Message = \"##$$$@!yalpstcejorp EPUVT****9887\"\n",
+    "\n",
+    "#Extract the core part of the message\n",
+    "core = (Encoded_Message.split('!')[1]).split(\"*\")[0]\n",
+    "print(\"Core_message:\",core)\n",
+    "\n",
+    "#Reverse the first word\n",
+    "first_word = core.split()[0]\n",
+    "Rev_first_word = first_word[::-1]\n",
+    "print(\"Reversed first word:\",Rev_first_word)\n",
+    "\n",
+    "#Replace shifted vowels in the second word\n",
+    "second_word = core.split()[1]\n",
+    "decoded_second = second_word.replace(\"E\",\"A\").replace(\"U\",\"O\")\n",
+    "print(\"Second word decoded:\", decoded_second)\n",
+    "\n",
+    "#Final decoded message\n",
+    "Final_decoded_message = Rev_first_word + \" \" + decoded_second\n",
+    "print(\"Final_decoded_message:\", Final_decoded_message)"
+   ]
   }
  ],
  "metadata": {
