--- a/src/Python/Session_1/Code/Basic.ipynb
+++ b/src/Python/Session_1/Code/Basic.ipynb
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 2,
    "id": "deee266d",
    "metadata": {},
    "outputs": [
@@ -171,11 +171,273 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "44fcf08e",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "list"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list_1 = [1, 2, 3, 4, \"Depi\", \"learning\", True, [1, 2, 3, \"true\", [\"ml\", \"dl\", \"ds\"]]]\n",
+    "\n",
+    "type(list_1)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "4d639429",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['amit', 'learning', 'python', 'ml']\n"
+     ]
+    }
+   ],
+   "source": [
+    "list_2 = [\"amit\", \"learning\", \"python\"]\n",
+    "\n",
+    "list_2.append(\"ml\")\n",
+    "\n",
+    "print(list_2)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "95d0c150",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['amit', 'DEPI', 'learning', 'python']\n"
+     ]
+    }
+   ],
+   "source": [
+    "list_3 = [\"amit\", \"learning\", \"python\"]\n",
+    "list_3.insert(1, \"DEPI\")\n",
+    "print(list_3)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "92fd0682",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['amit', 'learning', 'python', 'm', 'a', 'c', 'h', 'i', 'n', 'e']\n"
+     ]
+    }
+   ],
+   "source": [
+    "list_4 = [\"amit\", \"learning\", \"python\"]\n",
+    "list_4.extend(\"machine\")\n",
+    "print(list_4)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "2b0fceb9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['amit', 'python']\n"
+     ]
+    }
+   ],
+   "source": [
+    "list_one = [\"amit\", \"learning\", \"python\"]\n",
+    "list_one.remove(\"learning\")\n",
+    "print(list_one)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "53e6de8f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['amit', 'learning']\n"
+     ]
+    }
+   ],
+   "source": [
+    "list_one = [\"amit\", \"learning\", \"python\"]\n",
+    "list_one.pop()\n",
+    "print(list_one)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "e311f564",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['amit', 'python']\n"
+     ]
+    }
+   ],
+   "source": [
+    "list_one = [\"amit\", \"learning\", \"python\"]\n",
+    "list_one.pop(1)\n",
+    "print(list_one)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "ecc77619",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'list_one' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[16]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[38;5;28;01mdel\u001b[39;00m \u001b[43mlist_one\u001b[49m\n\u001b[32m      2\u001b[39m list_one\n",
+      "\u001b[31mNameError\u001b[39m: name 'list_one' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "del list_one\n",
+    "list_one"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "b76bafc3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Updated list: ['learning', 'python', 'machine learning', 'data science', 'deep learning']\n"
+     ]
+    }
+   ],
+   "source": [
+    "input_list = [\"amit\", \"learning\", \"python\", \"machine learning\", \"data science\", \"deep learning\"]\n",
+    "\n",
+    "item = input(\"Enter item to remove: \")\n",
+    "input_list.remove(item)\n",
+    "\n",
+    "print(\"Updated list:\", input_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "c15fb3f1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'key1': 12.5, 'key2': 'value2', 'key3': 'python', 4: [1, 2, 3, 4, 5]}\n"
+     ]
+    }
+   ],
+   "source": [
+    "dictionary_one = {\"key1\": 12.5, \"key2\": \"value2\", \"key3\": \"python\", 4: [1, 2, 3, 4, 5]}\n",
+    "print(dictionary_one)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "eee63dfa",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "addition: 14.0\n",
+      "subtraction: -2.0\n",
+      "multiplication: 48.0\n",
+      "division: 0.75\n"
+     ]
+    }
+   ],
+   "source": [
+    "num1 = float(input(\"Enter first number: \"))\n",
+    "num2 = float(input(\"Enter second number: \"))\n",
+    "\n",
+    "print(\"addition:\", num1 + num2)\n",
+    "print(\"subtraction:\", num1 - num2)\n",
+    "print(\"multiplication:\", num1 * num2)\n",
+    "print(\"division:\", num1 / num2) \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9a2d9ed5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Grade: C\n"
+     ]
+    }
+   ],
+   "source": [
+    "degree = float(input(\"Enter student degree (0-100): \"))\n",
+    "\n",
+    "while degree < 0 or degree > 100:\n",
+    "    degree = float(input(\"Invalid input Enter a value between 0 and 100: \"))\n",
+    "\n",
+    "if 90 <= degree <= 100:\n",
+    "    print(\"Grade: A\")\n",
+    "elif 80 <= degree < 90:\n",
+    "    print(\"Grade: B\")\n",
+    "elif 70 <= degree < 80:\n",
+    "    print(\"Grade: C\")\n",
+    "elif 60 <= degree < 70:\n",
+    "    print(\"Grade: D\")\n",
+    "else:\n",
+    "    print(\"Grade: F\")\n"
+   ]
   }
  ],
  "metadata": {
