--- a/src/Python/Session_2/Assignment/assignment.ipynb
+++ b/src/Python/Session_2/Assignment/assignment.ipynb
@@ -691,14 +691,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "8f5a28dd",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "fantastic\n"
+     ]
+    }
+   ],
    "source": [
     "words = [\"hi\", \"hello\", \"fantastic\", \"world\"]\n",
     "\n",
     "# TODO: find the longest word\n",
+    "longest = [0]\n",
+    "\n",
+    "for word in words:\n",
+    "    if len(word) > len(longest):\n",
+    "        longest = word\n",
     "\n",
     "print(longest)\n",
     "# Hint: Track the word with the largest len()."
@@ -714,15 +727,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "06b248ca",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'a': 1, 'b': 2, 'c': 3, 'd': 4}\n"
+     ]
+    }
+   ],
    "source": [
     "d1 = {\"a\": 1, \"b\": 2}\n",
     "d2 = {\"c\": 3, \"d\": 4}\n",
     "\n",
     "# TODO: merge into one dictionary\n",
+    "result = {**d1 , **d2}\n",
     "\n",
     "print(result)\n",
     "# Hint: Use unpacking or update()."
@@ -738,14 +760,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "89c525e1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "60\n"
+     ]
+    }
+   ],
    "source": [
     "data = {\"a\": 10, \"b\": 20, \"c\": 30}\n",
     "\n",
     "# TODO: sum all dictionary values\n",
+    "\n",
+    "total = 0\n",
+    "for value in data.values():\n",
+    "    total += value\n",
     "\n",
     "print(total)\n"
    ]
@@ -760,10 +794,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "0d597d3d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "60\n"
+     ]
+    }
+   ],
    "source": [
     "data = {\"a\": 10, \"b\": 20, \"c\": 30}\n",
     "#for dictionary i have a key and value so you can loop and find what you need (key or values\n",
@@ -784,10 +826,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "ab961f6c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "510\n"
+     ]
+    }
+   ],
    "source": [
     "# TODO: sum all scores\n",
     "scores = {\n",
@@ -796,13 +846,13 @@
     "    \"student3\": {\"math\": 92, \"science\": 88},\n",
     "}\n",
     "\n",
-    "total = ___      # TODO: start total at 0\n",
+    "total = 0      # TODO: start total at 0\n",
     "\n",
-    "for student_data in scores.___():# TODO: loop over values of the dictionary\n",
-    "    for score in student_data.___(): # TODO: loop over inner dictionary values\n",
-    "        total ___ score              # TODO: update the total\n",
+    "for student_data in scores.values():# TODO: loop over values of the dictionary\n",
+    "    for score in student_data.values(): # TODO: loop over inner dictionary values\n",
+    "        total += score              # TODO: update the total\n",
     "\n",
-    "print(___)       # TODO: print the result\n",
+    "print(total)       # TODO: print the result\n",
     "\n",
     "#hint you will need nested for loop one "
    ]
