--- a/src/Python/session_4/Task/my_assignment1.ipynb
+++ b/src/Python/session_4/Task/my_assignment1.ipynb
@@ -298,11 +298,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Palindrome\n"
+     ]
+    }
+   ],
    "source": [
-    "# Write your answer here"
+    "def is_palindrome(text):\n",
+    "\n",
+    "    \"\"\"\n",
+    "    Check whether a string is a palindrome.\n",
+    "\n",
+    "    The function compares characters from the beginning\n",
+    "    and the end of the string using a while loop and\n",
+    "    stops at the middle of the string.\n",
+    "\n",
+    "    Parameters:\n",
+    "      text (str): The string to be checked.\n",
+    "\n",
+    "    Returns:\n",
+    "      None: Prints \"Palindrome\" if the string reads the same\n",
+    "      from left to right and right to left, otherwise prints\n",
+    "      \"Not a Palindrome\".\n",
+    "    \"\"\"\n",
+    "\n",
+    "    i = 0\n",
+    "\n",
+    "    while i < len(text) // 2:\n",
+    "\n",
+    "        if text[i] != text[-(i + 1)]:\n",
+    "\n",
+    "            print(\"Not a Palindrome\")\n",
+    "            return\n",
+    "        \n",
+    "        i += 1\n",
+    "\n",
+    "    print(\"Palindrome\")\n",
+    "\n",
+    "is_palindrome(\"racecar\")"
    ]
   },
   {
@@ -316,11 +355,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "120"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Write your answer here"
+    "def factorial(n):\n",
+    "    \"\"\"\n",
+    "    Calculate the factorial of a non-negative integer using recursion.\n",
+    "\n",
+    "    Parameters:\n",
+    "      n (int): A non-negative integer whose factorial is to be calculated.\n",
+    "\n",
+    "    Returns:\n",
+    "      int: The factorial of the given integer.\n",
+    "    \"\"\"\n",
+    "\n",
+    "    if n == 0 or n == 1:\n",
+    "        return 1\n",
+    "    else:\n",
+    "        return n * factorial(n - 1)\n",
+    "    \n",
+    "factorial(5)"
    ]
   },
   {
@@ -334,11 +400,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 4, 9, 16, 25, 36, 49, 64, 81, 100]"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Write your answer here"
+    "def square_number(start , end):\n",
+    "    \"\"\"\n",
+    "    Create a list of squares of numbers from start to end.\n",
+    "\n",
+    "    Parameters:\n",
+    "      start (int): The starting number of the range.\n",
+    "      end (int): The ending number of the range.\n",
+    "\n",
+    "    Returns:\n",
+    "      list: A list containing the squares of numbers\n",
+    "      from start up to end.\n",
+    "    \"\"\"\n",
+    "\n",
+    "    squares = []\n",
+    "    for i in range(start, end+1):\n",
+    "        squares.append(i * i)\n",
+    "\n",
+    "    return squares\n",
+    "\n",
+    "square_number(1, 10)\n"
    ]
   },
   {
@@ -350,12 +446,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Write your answer here"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -370,11 +464,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "12"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Write your answer here"
+    "def sum_of_even_numbers(numbers):\n",
+    "    \"\"\"\n",
+    "    Calculate the sum of even numbers in a list.\n",
+    "\n",
+    "    Parameters:\n",
+    "      numbers (list): A list of integers.\n",
+    "\n",
+    "    Returns:\n",
+    "      int: The sum of all even numbers in the list.\n",
+    "    \"\"\"\n",
+    "    total = 0\n",
+    "\n",
+    "    for num in numbers:\n",
+    "        if num % 2 == 0:\n",
+    "            total += num\n",
+    "\n",
+    "    return total\n",
+    "\n",
+    "sum_of_even_numbers([1, 2, 3, 4, 5, 6])"
    ]
   },
   {
@@ -391,11 +514,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[3, 2, 1]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Write your answer here"
+    "def reverse_list(lst):\n",
+    "    \"\"\"\n",
+    "    Reverse a list and return the reversed list.\n",
+    "\n",
+    "    Parameters:\n",
+    "      lst (list): The list to be reversed.\n",
+    "\n",
+    "    Returns:\n",
+    "      list: A new list containing the elements\n",
+    "      of the input list in reverse order.\n",
+    "    \"\"\"    \n",
+    "    return lst[::-1]\n",
+    "\n",
+    "\n",
+    "reverse_list([1,2,3])"
    ]
   },
   {
@@ -414,9 +562,39 @@
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Write your answer here"
+    "def get_median (numbers):\n",
+    "    \"\"\"\n",
+    "    Calculate the median of a list of numbers.\n",
+    "\n",
+    "    The function sorts the list and returns the middle element.\n",
+    "\n",
+    "    Parameters:\n",
+    "        numbers (list): A list of numbers.\n",
+    "\n",
+    "    Returns:\n",
+    "        int: The median value of the sorted list.\n",
+    "    \"\"\"\n",
+    "    sorted_numbers = sorted(numbers)\n",
+    "    n = len(sorted_numbers)\n",
+    "    median = n // 2\n",
+    "\n",
+    "    return sorted_numbers[median]\n",
+    "\n",
+    "get_median([5,2,7,3,1])\n",
+    "    "
    ]
   },
   {
@@ -433,11 +611,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Write your answer here"
+    "def get_mode(numbers):\n",
+    "    \"\"\"\n",
+    "    Calculate the mode of a list of numbers.\n",
+    "\n",
+    "    The mode is the value that appears most frequently\n",
+    "    in the list. The function counts occurrences of\n",
+    "    each element using nested loops and returns the\n",
+    "    most frequent one.\n",
+    "\n",
+    "    Parameters:\n",
+    "        numbers (list): A list of numbers.\n",
+    "\n",
+    "    Returns:\n",
+    "        int: The most frequent number in the list.\n",
+    "    \"\"\"\n",
+    "    mode = 0\n",
+    "    max_count = 0\n",
+    "\n",
+    "    for num in numbers:\n",
+    "        count = 0\n",
+    "        for x in numbers:\n",
+    "            if x == num:\n",
+    "                count += 1\n",
+    "\n",
+    "        if count > max_count:\n",
+    "            max_count = count\n",
+    "            mode = num\n",
+    "\n",
+    "    return mode\n",
+    "\n",
+    "get_mode([5, 2, 7, 3, 2, 1, 5])"
    ]
   },
   {
@@ -454,11 +673,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'C'"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Write your answer here"
+    "def get_grade(mark):\n",
+    "    \"\"\"\n",
+    "    Convert a numeric mark into a letter grade.\n",
+    "\n",
+    "    The function determines the grade based on\n",
+    "    predefined mark ranges.\n",
+    "\n",
+    "    Parameters:\n",
+    "        mark (int): The student's mark.\n",
+    "\n",
+    "    Returns:\n",
+    "        str: The corresponding grade letter\n",
+    "        (\"A\", \"B\", \"C\", \"D\", or \"F\").\n",
+    "    \"\"\"\n",
+    "    if 85 <= mark <= 100:\n",
+    "        return \"A\"\n",
+    "    elif 75 <= mark < 85:\n",
+    "        return \"B\"\n",
+    "    elif 65 <= mark < 75:\n",
+    "        return \"C\"\n",
+    "    elif 50 <= mark < 65:\n",
+    "        return \"D\"\n",
+    "    else:\n",
+    "        return \"F\"\n",
+    "    \n",
+    "\n",
+    "get_grade(68)"
    ]
   },
   {
