--- a/src/Python/Session_6/code/code.ipynb
+++ b/src/Python/Session_6/code/code.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "319ff331",
    "metadata": {},
    "outputs": [],
@@ -265,8 +265,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "8886f016",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([2, 4, 3])"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "v = np.array ([2,3,2,4,3,5,6])\n",
+    "v[2:5]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e1a2f87f",
    "metadata": {},
    "outputs": [],
    "source": []
