--- a/src/Python/Final_project/Final project.ipynb
+++ b/src/Python/Final_project/Final project.ipynb
@@ -344,169 +344,80 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import tkinter as tk\n",
-    "from tkinter import messagebox\n",
     "\n",
-    "# =========================\n",
-    "# Core Classes (UML-based)\n",
-    "# =========================\n",
     "class Person:\n",
+    "    \"\"\"Represents a generic person.\"\"\"\n",
+    "\n",
     "    def __init__(self, name: str, age: int):\n",
     "        self.name = name\n",
     "        self.age = age\n",
     "\n",
-    "    def view_info(self):\n",
+    "    def view_info(self) -> str:\n",
+    "        \"\"\"Returns basic person information.\"\"\"\n",
     "        return f\"Name: {self.name}, Age: {self.age}\"\n",
     "\n",
     "\n",
-    "class Patient(Person):\n",
-    "    def __init__(self, name: str, age: int, medical_record: str):\n",
-    "        super().__init__(name, age)\n",
-    "        self.medical_record = medical_record\n",
-    "\n",
-    "    def view_record(self):\n",
-    "        return f\"Patient Record: {self.medical_record}\"\n",
-    "\n",
-    "\n",
     "class Staff(Person):\n",
+    "    \"\"\"Represents a hospital staff member.\n",
+    "\n",
+    "    This class extends the Person class by adding a job position\n",
+    "    specific to hospital staff members.\n",
+    "    \"\"\"\n",
+    "\n",
     "    def __init__(self, name: str, age: int, position: str):\n",
+    "        \"\"\"Initializes a Staff object.\n",
+    "\n",
+    "        Args:\n",
+    "            name (str): Full name of the staff member.\n",
+    "            age (int): Age of the staff member.\n",
+    "            position (str): Job position in the hospital.\n",
+    "        \"\"\"\n",
+    "        # Initialize inherited attributes\n",
     "        super().__init__(name, age)\n",
+    "\n",
+    "        # Store staff-specific attribute\n",
     "        self.position = position\n",
     "\n",
-    "    def view_info(self):\n",
-    "        return f\"Staff Name: {self.name}, Age: {self.age}, Position: {self.position}\"\n",
-    "\n",
-    "\n",
-    "class Department:\n",
-    "    def __init__(self, name: str):\n",
-    "        self.name = name\n",
-    "        self.patients = []\n",
-    "        self.staff_members = []\n",
-    "\n",
-    "    def add_patient(self, patient: Patient):\n",
-    "        self.patients.append(patient)\n",
-    "\n",
-    "    def add_staff(self, staff: Staff):\n",
-    "        self.staff_members.append(staff)\n",
-    "\n",
-    "\n",
-    "class Hospital:\n",
-    "    def __init__(self, name: str, location: str):\n",
-    "        self.name = name\n",
-    "        self.location = location\n",
-    "        self.departments = []\n",
-    "\n",
-    "    def add_department(self, department: Department):\n",
-    "        self.departments.append(department)\n",
-    "\n",
-    "\n",
-    "# =========================\n",
-    "# Tkinter GUI\n",
-    "# =========================\n",
-    "class HospitalGUI:\n",
-    "    def __init__(self, root):\n",
-    "        self.root = root\n",
-    "        self.root.title(\"Hospital Management System\")\n",
-    "\n",
-    "        # System objects\n",
-    "        self.hospital = Hospital(\"City Hospital\", \"Downtown\")\n",
-    "        self.department = Department(\"Cardiology\")\n",
-    "        self.hospital.add_department(self.department)\n",
-    "\n",
-    "        # -------------------------\n",
-    "        # Labels & Entries\n",
-    "        # -------------------------\n",
-    "        tk.Label(root, text=\"Name\").grid(row=0, column=0, padx=5, pady=5)\n",
-    "        tk.Label(root, text=\"Age\").grid(row=1, column=0, padx=5, pady=5)\n",
-    "        tk.Label(root, text=\"Role / Record\").grid(row=2, column=0, padx=5, pady=5)\n",
-    "\n",
-    "        self.name_entry = tk.Entry(root)\n",
-    "        self.age_entry = tk.Entry(root)\n",
-    "        self.extra_entry = tk.Entry(root)\n",
-    "\n",
-    "        self.name_entry.grid(row=0, column=1)\n",
-    "        self.age_entry.grid(row=1, column=1)\n",
-    "        self.extra_entry.grid(row=2, column=1)\n",
-    "\n",
-    "        # -------------------------\n",
-    "        # Buttons\n",
-    "        # -------------------------\n",
-    "        tk.Button(root, text=\"Add Patient\", command=self.add_patient).grid(row=3, column=0, pady=10)\n",
-    "        tk.Button(root, text=\"Add Staff\", command=self.add_staff).grid(row=3, column=1, pady=10)\n",
-    "\n",
-    "        tk.Button(root, text=\"Show Patients\", command=self.show_patients).grid(row=4, column=0, pady=5)\n",
-    "        tk.Button(root, text=\"Show Staff\", command=self.show_staff).grid(row=4, column=1, pady=5)\n",
-    "\n",
-    "    # -------------------------\n",
-    "    # GUI Functions\n",
-    "    # -------------------------\n",
-    "    def add_patient(self):\n",
-    "        try:\n",
-    "            patient = Patient(\n",
-    "                self.name_entry.get(),\n",
-    "                int(self.age_entry.get()),\n",
-    "                self.extra_entry.get()\n",
-    "            )\n",
-    "            self.department.add_patient(patient)\n",
-    "            messagebox.showinfo(\"Success\", \"Patient added successfully\")\n",
-    "        except ValueError:\n",
-    "            messagebox.showerror(\"Error\", \"Age must be a number\")\n",
-    "\n",
-    "    def add_staff(self):\n",
-    "        try:\n",
-    "            staff = Staff(\n",
-    "                self.name_entry.get(),\n",
-    "                int(self.age_entry.get()),\n",
-    "                self.extra_entry.get()\n",
-    "            )\n",
-    "            self.department.add_staff(staff)\n",
-    "            messagebox.showinfo(\"Success\", \"Staff added successfully\")\n",
-    "        except ValueError:\n",
-    "            messagebox.showerror(\"Error\", \"Age must be a number\")\n",
-    "\n",
-    "    def show_patients(self):\n",
-    "        if not self.department.patients:\n",
-    "            messagebox.showinfo(\"Patients\", \"No patients available\")\n",
-    "            return\n",
-    "\n",
-    "        info = \"\"\n",
-    "        for p in self.department.patients:\n",
-    "            info += f\"{p.view_info()} | {p.view_record()}\\n\"\n",
-    "\n",
-    "        messagebox.showinfo(\"Patients\", info)\n",
-    "\n",
-    "    def show_staff(self):\n",
-    "        if not self.department.staff_members:\n",
-    "            messagebox.showinfo(\"Staff\", \"No staff available\")\n",
-    "            return\n",
-    "\n",
-    "        info = \"\"\n",
-    "        for s in self.department.staff_members:\n",
-    "            info += s.view_info() + \"\\n\"\n",
-    "\n",
-    "        messagebox.showinfo(\"Staff\", info)\n",
-    "\n",
-    "\n",
-    "# =========================\n",
-    "# Run Application\n",
-    "# =========================\n",
-    "if __name__ == \"__main__\":\n",
-    "    root = tk.Tk()\n",
-    "    app = HospitalGUI(root)\n",
-    "    root.mainloop()\n"
+    "    def view_info(self) -> str:\n",
+    "        \"\"\"Returns formatted staff information.\"\"\"\n",
+    "        return (\n",
+    "            f\"Staff Name: {self.name}, \"\n",
+    "            f\"Age: {self.age}, \"\n",
+    "            f\"Position: {self.position}\"\n",
+    "        )\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Staff Name: DR. Hazem, Age: 23, Position: Cardiologist\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "name = input(\"Enter staff name: \")\n",
+    "age = int(input(\"Enter staff age: \"))\n",
+    "position = input(\"Enter staff position: \")\n",
+    "\n",
+    "# Create Staff object using user input\n",
+    "staff_member = Staff(name, age, position)\n",
+    "\n",
+    "# Display staff information\n",
+    "print(staff_member.view_info())\n"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": ".env",
    "language": "python",
    "name": "python3"
   },
