--- a/src/Python/Session_6/code/code.ipynb
+++ b/src/Python/Session_6/code/code.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "319ff331",
    "metadata": {},
    "outputs": [],
@@ -287,8 +287,316 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "e1a2f87f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[4 5]\n",
+      " [7 8]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "mat = np.array([[1,2,3],\n",
+    "                [4,5,6],\n",
+    "                [7,8,9],\n",
+    "                [0,0,0]])\n",
+    "\n",
+    "print(mat[-3:-1 , -3:-1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "6316834c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([  0,  90, 180, 270, 360])"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "angle = np.arange(0 , 361 , 90)\n",
+    "angle"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "a11632f9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1, 0, 0],\n",
+       "       [0, 1, 0],\n",
+       "       [0, 0, 1]])"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "I = np.identity(3 , dtype='int')\n",
+    "I"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "ec23c94f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.61510418, 0.10787652, 0.65535839],\n",
+       "       [0.22673634, 0.51273871, 0.55264824],\n",
+       "       [0.08875466, 0.97861331, 0.51480989]])"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.random.random((3,3))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "2d73e91b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([['ali', '3', '3', 'hazem', 'hazem'],\n",
+       "       ['False', '3', 'ali', '3', 'ali'],\n",
+       "       ['ali', '3', '3', 'hazem', 'ali']], dtype='<U21')"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = ['ali' , 3 , 'hazem' , False]\n",
+    "np.random.choice(a , size=(3,5))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "88c9cde9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mat_1 = np.zeros((3,4))\n",
+    "mat_2 = np.ones((5,3))\n",
+    "\n",
+    "np.savez('np_file' , Ones_Mat = mat_1 , Zeros_Mat = mat_2)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "40d0e005",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0.]]\n",
+      "[[1. 1. 1.]\n",
+      " [1. 1. 1.]\n",
+      " [1. 1. 1.]\n",
+      " [1. 1. 1.]\n",
+      " [1. 1. 1.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "with np.load('np_file.npz') as file:\n",
+    "    mat_1 = file['Ones_Mat']\n",
+    "    mat_2 = file['Zeros_Mat']\n",
+    "\n",
+    "print(mat_1)\n",
+    "print(mat_2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "23cbf2b4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def array_reshape ( arr , rows = -1 , col = -1):\n",
+    "\n",
+    "    try:\n",
+    "        arr = np.array(arr)\n",
+    "        return arr.reshape(rows , col)\n",
+    "    except (TypeError , ValueError) as e:\n",
+    "        raise ValueError(f'Invalid reshape operation:{e}')\n",
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "b6097d02",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 2 3]\n",
+      " [4 5 6]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "vec = [1,2,3,4,5,6]\n",
+    "print(array_reshape(vec , 2, 3))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "05418cdf",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.True_"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "v = np.array([1,2,3,4,5,0])\n",
+    "np.any(v >= 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "ee7b3d27",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.False_"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "v = np.array([1,2,3,4,5,0])\n",
+    "np.all(v >= 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0c1db3a2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ True, False, False, False,  True])"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "v1 = np.array([1,2,3,4,5])\n",
+    "v2 = np.array([1,8,0,6,5])\n",
+    "\n",
+    "np.isclose(v1,v2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "93ef1f5d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[False False  True  True  True]\n"
+     ]
+    }
+   ],
+   "source": [
+    "v = np.array([2,3,5,4,10])\n",
+    "\n",
+    "condition = v >= 4\n",
+    "print(condition)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "9b19fa89",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 2  3 -1 -1 -1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "v = np.array([2,3,5,4,10])\n",
+    "condition = v >= 4\n",
+    "new_arr = np.where(condition , -1 , v)\n",
+    "print(new_arr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "40ad809d",
    "metadata": {},
    "outputs": [],
    "source": []
